Added in api method and created bettr naming of apis
